@@ -2,6 +2,7 @@
 
 namespace App\Models;
 
+use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Route;
 use Illuminate\Database\Eloquent\Model;
 
@@ -11,7 +12,11 @@ abstract class ModelBindingWithContact extends Model
     {
         $contact = Route::current()->parameter('contact');
 
-        return $this->where('account_id', auth()->user()->account_id)
+        if (Auth::guest() || is_null($contact)) {
+            return;
+        }
+
+        return $this->where('account_id', Auth::user()->account_id)
             ->where('contact_id', $contact->id)
             ->where($this->getRouteKeyName(), $value)
             ->firstOrFail();
